# SCUComplier

./: README.md
Lexer/: CMakeLists.txt  README.md
Lexer/include/: FileController.h  lexer.h  lexertest.h
Lexer/input/: 1-simple.cm  10-error.cm  2-gcd.cm  4-comment.cm  5-programwithcomment.cm  6-chinese.cm  7-superlong.cm  8-superhigh.cm
Lexer/output/: 1-simple.out  10-error.out  5-programwithcomment.out  6-chinese.out
Lexer/ref/: 2-gcd.out  3-mainwithfunc.out  4-comment.out  7-superlong.out  8-superhigh.out
Lexer/src/: FileController.cpp  lexer.cpp  lexertest.cpp  main.cpp
Parser/: README.md  test.py
Parser/code/: lexical.l  main.c  makefile  multinode.c  multinode.h  syntax.y
Parser/outputs/: A-1.out  A-10.out  A-2.out  A-3.out  A-4.out  A-5.out  A-6.out  A-7.out  A-8.out  A-9.out  B-1.out  B-2.out  E1-1.out  E2-1.out  E3-1.out
